force-app/main/default/objects/msf_opportunity_h__x/fields/npe03_recurring_donation_c__c.field-meta.xml
<CustomField>
    <fullName>npe03_recurring_donation_c__c</fullName>
    <description>npe03__recurring_donation__c</description>
    <externalDeveloperName>npe03__recurring_donation__c</externalDeveloperName>
    <label>Donación recurrente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>