force-app/main/default/objects/msf_opportunity_h__x/fields/npo02_combinedrollupfieldset_c__c.field-meta.xml
<CustomField>
    <fullName>npo02_combinedrollupfieldset_c__c</fullName>
    <description>npo02__combinedrollupfieldset__c</description>
    <externalDeveloperName>npo02__combinedrollupfieldset__c</externalDeveloperName>
    <label>npo02__combinedrollupfieldset__c</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>