force-app/main/default/objects/msf_opportunity_h__x/fields/npo02_systemhouseholdcontactroleprocesso__c.field-meta.xml
<CustomField>
    <fullName>npo02_systemhouseholdcontactroleprocesso__c</fullName>
    <description>npo02__systemhouseholdcontactroleprocessor__c</description>
    <externalDeveloperName>npo02__systemhouseholdcontactroleprocessor__c</externalDeveloperName>
    <label>npo02__systemhouseholdcontactroleprocess</label>
    <length>255</length>
    <type>Text</type>
</CustomField>