force-app/main/default/objects/msf_opportunity_h__x/fields/npsp4hub_mandate_c__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub_mandate_c__c</fullName>
    <description>npsp4hub__mandate__c</description>
    <externalDeveloperName>npsp4hub__mandate__c</externalDeveloperName>
    <label>Mandato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>