force-app/main/default/objects/msf_opportunity_h__x/fields/npsp4hub_payment_processor_c__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub_payment_processor_c__c</fullName>
    <description>npsp4hub__payment_processor__c</description>
    <externalDeveloperName>npsp4hub__payment_processor__c</externalDeveloperName>
    <label>Proceso de pago</label>
    <length>255</length>
    <type>Text</type>
</CustomField>