force-app/main/default/objects/msf_opportunity_h__x/fields/npsp4hub_payment_profile_c__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub_payment_profile_c__c</fullName>
    <description>npsp4hub__payment_profile__c</description>
    <externalDeveloperName>npsp4hub__payment_profile__c</externalDeveloperName>
    <label>Datos económicos</label>
    <length>80</length>
    <type>Text</type>
</CustomField>