force-app/main/default/objects/msf_opportunity_h__x/fields/npsp4hub_target_c__c.field-meta.xml
<CustomField>
    <fullName>npsp4hub_target_c__c</fullName>
    <description>npsp4hub__target__c</description>
    <externalDeveloperName>npsp4hub__target__c</externalDeveloperName>
    <label>Cuenta de destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>