force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_acknowledgment_date_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_acknowledgment_date_c__c</fullName>
    <description>npsp__acknowledgment_date__c</description>
    <externalDeveloperName>npsp__acknowledgment_date__c</externalDeveloperName>
    <label>npsp__acknowledgment_date__c</label>
    <type>Date</type>
</CustomField>