force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_acknowledgment_status_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_acknowledgment_status_c__c</fullName>
    <description>npsp__acknowledgment_status__c</description>
    <externalDeveloperName>npsp__acknowledgment_status__c</externalDeveloperName>
    <label>npsp__acknowledgment_status__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>