force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_batch_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_batch_c__c</fullName>
    <description>npsp__batch__c</description>
    <externalDeveloperName>npsp__batch__c</externalDeveloperName>
    <label>npsp__batch__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>