force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_closed_lost_reason_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_closed_lost_reason_c__c</fullName>
    <description>npsp__closed_lost_reason__c</description>
    <externalDeveloperName>npsp__closed_lost_reason__c</externalDeveloperName>
    <label>npsp__closed_lost_reason__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>