force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_fair_market_value_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_fair_market_value_c__c</fullName>
    <description>npsp__fair_market_value__c</description>
    <externalDeveloperName>npsp__fair_market_value__c</externalDeveloperName>
    <label>npsp__fair_market_value__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>