force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_gift_strategy_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_gift_strategy_c__c</fullName>
    <description>npsp__gift_strategy__c</description>
    <externalDeveloperName>npsp__gift_strategy__c</externalDeveloperName>
    <label>npsp__gift_strategy__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>