force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_grant_contract_number_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_grant_contract_number_c__c</fullName>
    <description>npsp__grant_contract_number__c</description>
    <externalDeveloperName>npsp__grant_contract_number__c</externalDeveloperName>
    <label>npsp__grant_contract_number__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>