force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_grant_program_area_s_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_grant_program_area_s_c__c</fullName>
    <description>npsp__grant_program_area_s__c</description>
    <externalDeveloperName>npsp__grant_program_area_s__c</externalDeveloperName>
    <label>npsp__grant_program_area_s__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>