force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_grant_requirements_website_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_grant_requirements_website_c__c</fullName>
    <description>npsp__grant_requirements_website__c</description>
    <externalDeveloperName>npsp__grant_requirements_website__c</externalDeveloperName>
    <label>npsp__grant_requirements_website__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>