force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_honoree_contact_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_honoree_contact_c__c</fullName>
    <description>npsp__honoree_contact__c</description>
    <externalDeveloperName>npsp__honoree_contact__c</externalDeveloperName>
    <label>npsp__honoree_contact__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>