force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_in_kind_description_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_in_kind_description_c__c</fullName>
    <description>npsp__in_kind_description__c</description>
    <externalDeveloperName>npsp__in_kind_description__c</externalDeveloperName>
    <label>npsp__in_kind_description__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>