force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_in_kind_donor_declared_value_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_in_kind_donor_declared_value_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>npsp__in_kind_donor_declared_value__c</description>
    <externalDeveloperName>npsp__in_kind_donor_declared_value__c</externalDeveloperName>
    <label>npsp__in_kind_donor_declared_value__c</label>
    <type>Checkbox</type>
</CustomField>