force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_is_grant_renewal_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_is_grant_renewal_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>npsp__is_grant_renewal__c</description>
    <externalDeveloperName>npsp__is_grant_renewal__c</externalDeveloperName>
    <label>npsp__is_grant_renewal__c</label>
    <type>Checkbox</type>
</CustomField>