force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_matching_gift_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_matching_gift_c__c</fullName>
    <description>npsp__matching_gift__c</description>
    <externalDeveloperName>npsp__matching_gift__c</externalDeveloperName>
    <label>npsp__matching_gift__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>