force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_next_grant_deadline_due_date_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_next_grant_deadline_due_date_c__c</fullName>
    <description>npsp__next_grant_deadline_due_date__c</description>
    <externalDeveloperName>npsp__next_grant_deadline_due_date__c</externalDeveloperName>
    <label>npsp__next_grant_deadline_due_date__c</label>
    <type>Date</type>
</CustomField>