force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_notification_message_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_notification_message_c__c</fullName>
    <description>npsp__notification_message__c</description>
    <externalDeveloperName>npsp__notification_message__c</externalDeveloperName>
    <label>npsp__notification_message__c</label>
    <length>128</length>
    <type>Text</type>
</CustomField>