force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_notification_recipient_information__c.field-meta.xml
<CustomField>
    <fullName>npsp_notification_recipient_information__c</fullName>
    <description>npsp__notification_recipient_information__c</description>
    <externalDeveloperName>npsp__notification_recipient_information__c</externalDeveloperName>
    <label>npsp__notification_recipient_information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>