force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_previous_grant_opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_previous_grant_opportunity_c__c</fullName>
    <description>npsp__previous_grant_opportunity__c</description>
    <externalDeveloperName>npsp__previous_grant_opportunity__c</externalDeveloperName>
    <label>npsp__previous_grant_opportunity__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>