force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_primary_contact_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_primary_contact_c__c</fullName>
    <description>npsp__primary_contact__c</description>
    <externalDeveloperName>npsp__primary_contact__c</externalDeveloperName>
    <label>Contacto principal</label>
    <length>18</length>
    <referenceTargetField>Contact.msf_CustomExternalId__c</referenceTargetField>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades históricas</relationshipLabel>
    <relationshipName>msf_opportunity_h</relationshipName>
    <type>IndirectLookup</type>
</CustomField>