force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_primary_contact_campaign_member_sta__c.field-meta.xml
<CustomField>
    <fullName>npsp_primary_contact_campaign_member_sta__c</fullName>
    <description>npsp__primary_contact_campaign_member_status__c</description>
    <externalDeveloperName>npsp__primary_contact_campaign_member_status__c</externalDeveloperName>
    <label>npsp__primary_contact_campaign_member_st</label>
    <length>40</length>
    <type>Text</type>
</CustomField>