force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_requested_amount_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_requested_amount_c__c</fullName>
    <description>npsp__requested_amount__c</description>
    <externalDeveloperName>npsp__requested_amount__c</externalDeveloperName>
    <label>npsp__requested_amount__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>