force-app/main/default/objects/msf_opportunity_h__x/fields/npsp_tribute_type_c__c.field-meta.xml
<CustomField>
    <fullName>npsp_tribute_type_c__c</fullName>
    <description>npsp__tribute_type__c</description>
    <externalDeveloperName>npsp__tribute_type__c</externalDeveloperName>
    <label>npsp__tribute_type__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>