force-app/main/default/objects/msf_opportunity_h__x/fields/ownerid__c.field-meta.xml
<CustomField>
    <fullName>ownerid__c</fullName>
    <description>ownerid</description>
    <externalDeveloperName>ownerid</externalDeveloperName>
    <label>ownerid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>