force-app/main/default/objects/msf_opportunity_h__x/fields/pricebook2id__c.field-meta.xml
<CustomField>
    <fullName>pricebook2id__c</fullName>
    <description>pricebook2id</description>
    <externalDeveloperName>pricebook2id</externalDeveloperName>
    <label>pricebook2id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>