force-app/main/default/objects/msf_opportunity_h__x/fields/probability__c.field-meta.xml
<CustomField>
    <fullName>probability__c</fullName>
    <description>probability</description>
    <externalDeveloperName>probability</externalDeveloperName>
    <label>probability</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>