force-app/main/default/objects/msf_opportunity_h__x/fields/recordtypeid__c.field-meta.xml
<CustomField>
    <fullName>recordtypeid__c</fullName>
    <description>recordtypeid</description>
    <externalDeveloperName>recordtypeid</externalDeveloperName>
    <label>recordtypeid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>