force-app/main/default/objects/msf_opportunity_h__x/fields/stagename__c.field-meta.xml
<CustomField>
    <fullName>stagename__c</fullName>
    <description>stagename</description>
    <externalDeveloperName>stagename</externalDeveloperName>
    <label>stagename</label>
    <length>255</length>
    <type>Text</type>
</CustomField>