force-app/main/default/objects/msf_opportunity_h__x/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>type</description>
    <externalDeveloperName>type</externalDeveloperName>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>